fixed German translation
 SVN 9306@trunk

--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -610,7 +610,7 @@ msgstr "as-is"
 
 #: lazarusidestrconsts:lissortselascending
 msgid "Ascending"
-msgstr "Absteigend"
+msgstr "Aufsteigend"
 
 #: lazarusidestrconsts:dlgenvask
 msgid "Ask"
