updated Russian translations from Maxim Ganetsky
 SVN 9393@trunk

--- a/components/synedit/languages/synmacrorecorder.ru.po
+++ b/components/synedit/languages/synmacrorecorder.ru.po
@@ -1,16 +1,27 @@
+msgid ""
+msgstr ""
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
+"Project-Id-Version: lazaruside\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2006-06-03 19:57+0300\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+
 #: synmacrorecorder:scannotpause
 msgid "Can only pause when recording"
-msgstr ""
+msgstr "Можно только временно приостановиться при записи"
 
 #: synmacrorecorder:scannotresume
 msgid "Can only resume when paused"
-msgstr ""
+msgstr "Можно только продолжить, если временно приостановлен"
 
 #: synmacrorecorder:scannotplay
 msgid "Cannot playback macro when recording"
-msgstr ""
+msgstr "Невозможно воспроизвести макрос во время записи"
 
 #: synmacrorecorder:scannotrecord
 msgid "Cannot record macro when recording"
-msgstr ""
+msgstr "Невозможно записать макрос во время записи"
 
