--- a/components/synedit/languages/synedit.ru.po
+++ b/components/synedit/languages/synedit.ru.po
@@ -1,14 +1,25 @@
+msgid ""
+msgstr ""
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
+"Project-Id-Version: lazaruside\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2006-06-03 20:00+0300\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+
 #: syneditstrconst:syns_scrollinfofmt
 msgid "%d - %d"
 msgstr "%d - %d"
 
-#: syneditstrconst:syns_filterasm68hc11
-msgid "68HC11 Assembler Files (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
-msgstr "Файлы ассемблера 68HC11 (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
-
 #: syneditstrconst:syns_shortcutnone
 msgid "<none>"
 msgstr "<нет>"
+
+#: syneditstrconst:syns_filterasm68hc11
+msgid "68HC11 Assembler Files (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
+msgstr "Файлы ассемблера 68HC11 (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
 
 #: syneditstrconst:syns_filterawk
 msgid "AWK Script (*.awk)|*.awk"
@@ -24,11 +35,19 @@ msgstr "Файлы форм Borland (*.dfm;*.xfm)|*.dfm;*.xfm"
 
 #: syneditstrconst:syns_filtercpp
 msgid "C++ Files (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh"
-msgstr ""
+msgstr "Файлы C++ (*.c,*.cpp,*.h,*.hpp,*.hh)|*.c;*.cpp;*.h;*.hpp;*.hh"
+
+#: syneditstrconst:syns_filtercache
+msgid "Cache Files (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
+msgstr "Файлы кэша (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
 
 #: syneditstrconst:syns_filtercaclipper
 msgid "CA-Clipper Files (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
 msgstr "Файлы CA-Clipper (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
+
+#: syneditstrconst:syns_filtercss
+msgid "Cascading Stylesheets (*.css)|*.css"
+msgstr "Cascading Stylesheets (*.css)|*.css"
 
 #: syneditstrconst:syns_filtercorbaidl
 msgid "CORBA IDL files (*.idl)|*.idl"
@@ -37,14 +56,6 @@ msgstr "Файлы CORBA IDL (*.idl)|*.idl"
 #: syneditstrconst:syns_filtercpm
 msgid "CPM reports (*.rdf,*.rif,*.rmf,*.rxf)|*.rdf;*.rif;*.rmf;*.rxf"
 msgstr "Отчёты CPM (*.rdf,*.rif,*.rmf,*.rxf)|*.rdf;*.rif;*.rmf;*.rxf"
-
-#: syneditstrconst:syns_filtercache
-msgid "Cache Files (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
-msgstr "Файлы кэша (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
-
-#: syneditstrconst:syns_filtercss
-msgid "Cascading Stylesheets (*.css)|*.css"
-msgstr "Cascading Stylesheets (*.css)|*.css"
 
 #: syneditstrconst:syns_filteradsp21xx
 msgid "DSP Files (*.dsp,*.inc)|*.DSP;*.INC"
@@ -58,6 +69,10 @@ msgstr "Файлы фортрана (*.for)|*.for"
 msgid "Foxpro Files (*.prg)|*.prg"
 msgstr "Файлы Foxpro (*.prg)|*.prg"
 
+#: syneditstrconst:syns_filtergalaxy
+msgid "Galaxy Files (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
+msgstr "Файлы Galaxy (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
+
 #: syneditstrconst:syns_filtergembase
 msgid "GEMBASE Files (*.dml,*.gem)|*.DML;*.GEM"
 msgstr "Файлы GEMBASE (*.dml,*.gem)|*.DML;*.GEM"
@@ -66,17 +81,13 @@ msgstr "Файлы GEMBASE (*.dml,*.gem)|*.DML;*.GEM"
 msgid "GW-TEL Script Files (*.gws)|*.gws"
 msgstr "Скрипты GW-TEL (*.gws)|*.gws"
 
-#: syneditstrconst:syns_filtergalaxy
-msgid "Galaxy Files (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
-msgstr "Файлы Galaxy (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
-
-#: syneditstrconst:syns_filterhp
-msgid "HP48 Files (*.s,*.sou,*.a,*.hp)|*.S;*.SOU;*.A;*.HP"
-msgstr ""
-
 #: syneditstrconst:syns_filterhp48
 msgid "HP48 Files (*.s,*.sou,*.a,*.hp)|*.s;*.sou;*.a;*.hp"
 msgstr "Файлы HP48 (*.s,*.sou,*.a,*.hp)|*.s;*.sou;*.a;*.hp"
+
+#: syneditstrconst:syns_filterhp
+msgid "HP48 Files (*.s,*.sou,*.a,*.hp)|*.S;*.SOU;*.A;*.HP"
+msgstr "Файлы HP48 (*.s,*.sou,*.a,*.hp)|*.S;*.SOU;*.A;*.HP"
 
 #: syneditstrconst:syns_exporterformathtml
 msgid "HTML"
@@ -110,10 +121,6 @@ msgstr "Скрипты KiXtart (*.kix)|*.kix"
 msgid "Lazarus Form Files (*.lfm)|*.lfm"
 msgstr "Файлы форм Lazarus (*.lfm)|*.lfm"
 
-#: syneditstrconst:syns_filterbatch
-msgid "MS-DOS Batch Files (*.bat;*.cmd)|*.bat;*.cmd"
-msgstr "Пакетные файлы MS-DOS (*.bat;*.cmd)|*.bat;*.cmd"
-
 #: syneditstrconst:syns_filtermodelica
 msgid "Modelica Files (*.mo)|*.mo"
 msgstr "Файлы Modelica (*.mo)|*.mo"
@@ -122,13 +129,13 @@ msgstr "Файлы Modelica (*.mo)|*.mo"
 msgid "Modula-3 Files (*.m3)|*.m3"
 msgstr "Файлы Модула-3 (*.m3)|*.m3"
 
+#: syneditstrconst:syns_filterbatch
+msgid "MS-DOS Batch Files (*.bat;*.cmd)|*.bat;*.cmd"
+msgstr "Пакетные файлы MS-DOS (*.bat;*.cmd)|*.bat;*.cmd"
+
 #: syneditstrconst:syns_filtersyngenmsgfiles
 msgid "Msg files (*.msg)|*.msg"
 msgstr "Файлы Msg (*.msg)|*.msg"
-
-#: syneditstrconst:syns_filterphp
-msgid "PHP Files (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
-msgstr "Файлы PHP (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
 
 #: syneditstrconst:syns_previewscrollinfofmt
 msgid "Page: %d"
@@ -142,6 +149,10 @@ msgstr "Файлы паскаля (*.pas,*.dpr,*.dpk,*.inc)|*.pas;*.dpr;*.dpk;*.
 msgid "Perl Files (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
 msgstr "Файлы Perl (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
 
+#: syneditstrconst:syns_filterphp
+msgid "PHP Files (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
+msgstr "Файлы PHP (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
+
 #: syneditstrconst:syns_filterprogress
 msgid "Progress Files (*.w,*.p,*.i)|*.w;*.p;*.i"
 msgstr "Файлы Progress (*.w,*.p,*.i)|*.w;*.p;*.i"
@@ -150,17 +161,13 @@ msgstr "Файлы Progress (*.w,*.p,*.i)|*.w;*.p;*.i"
 msgid "Python Files (*.py)|*.py"
 msgstr "Файлы Python (*.py)|*.py"
 
-#: syneditstrconst:syns_exporterformatrtf
-msgid "RTF"
-msgstr "RTF"
-
 #: syneditstrconst:syns_filterrtf
 msgid "Rich Text Format (*.rtf)|*.rtf"
 msgstr "Текст в формате RTF (*.rtf)|*.rtf"
 
-#: syneditstrconst:syns_filtersql
-msgid "SQL Files (*.sql)|*.sql"
-msgstr "Файлы SQL (*.sql)|*.sql"
+#: syneditstrconst:syns_exporterformatrtf
+msgid "RTF"
+msgstr "RTF"
 
 #: syneditstrconst:syns_filtersdd
 msgid "Semanta DD files (*.sdd)|*.sdd"
@@ -169,6 +176,10 @@ msgstr "Файлы Semanta DD (*.sdd)|*.sdd"
 #: syneditstrconst:syns_eduplicateshortcut
 msgid "Shortcut already exists"
 msgstr "Комбинация уже существует"
+
+#: syneditstrconst:syns_filtersql
+msgid "SQL Files (*.sql)|*.sql"
+msgstr "Файлы SQL (*.sql)|*.sql"
 
 #: syneditstrconst:syns_filtersml
 msgid "Standard ML Files (*.sml)|*.sml"
@@ -180,7 +191,7 @@ msgstr "Файлы Tcl/Tk (*.tcl)|*.tcl"
 
 #: syneditstrconst:syns_filtertex
 msgid "TeX Files (*.tex)|*.tex"
-msgstr ""
+msgstr "Файлы TeX (*.tex)|*.tex"
 
 #: syneditstrconst:syns_duplicateshortcutmsg
 msgid "The keystroke \"%s\" is already assigned to another editor command. (%s)"
@@ -192,7 +203,7 @@ msgstr "Верхняя строка: %d"
 
 #: syneditstrconst:syns_filterunixshellscript
 msgid "UNIX Shell Scripts (*.sh)|*.sh"
-msgstr ""
+msgstr "Скрипты UNIX Shell (*.sh)|*.sh"
 
 #: syneditstrconst:syns_filtervbscript
 msgid "VBScript Files (*.vbs)|*.vbs"
@@ -202,11 +213,11 @@ msgstr "Файлы VBScript (*.vbs)|*.vbs"
 msgid "Visual Basic Files (*.bas)|*.bas"
 msgstr "Файлы Visual Basic (*.bas)|*.bas"
 
-#: syneditstrconst:syns_filterxml
-msgid "XML Document (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
-msgstr "Документы XML (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
-
 #: syneditstrconst:syns_filterx86asm
 msgid "x86 Assembly Files (*.asm)|*.ASM"
 msgstr "Файлы ассемблера x86 (*.asm)|*.ASM"
+
+#: syneditstrconst:syns_filterxml
+msgid "XML Document (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
+msgstr "Документы XML (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
 
