--- a/components/custom/README
+++ b/components/custom/README
@@ -1,3 +1,6 @@
+OBSOLETE - OBSOLETE - OBSOLETE - OBSOLETE - OBSOLETE - OBSOLETE - OBSOLETE
+
+
 How to add extra components to the lazarus IDE
 ==============================================
 
