--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -1032,7 +1032,7 @@ msgstr ""
 
 #: lazarusidestrconsts:rslanguagechinese
 msgid "Chinese"
-msgstr ""
+msgstr "kiina"
 
 #: lazarusidestrconsts:lischoosedelphipackage
 msgid "Choose Delphi package (*.dpk)"
@@ -1492,7 +1492,7 @@ msgstr ""
 
 #: lazarusidestrconsts:liscontinue
 msgid "Continue"
-msgstr ""
+msgstr "Jatka"
 
 #: lazarusidestrconsts:liscontinuewithoutloadingform
 msgid "Continue without loading form"
@@ -1844,7 +1844,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgdefaulteditorfont
 msgid "Default editor font"
-msgstr ""
+msgstr "Editorin oletuskirjasin"
 
 #: lazarusidestrconsts:dlgpasext
 msgid "Default pascal extension"
@@ -2212,11 +2212,11 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgeditorfont
 msgid "Editor font"
-msgstr ""
+msgstr "Editorin käyttämä kirjasin"
 
 #: lazarusidestrconsts:dlgeditorfontheight
 msgid "Editor font height"
-msgstr ""
+msgstr "Editorin käyttämän kirjasimen koko"
 
 #: lazarusidestrconsts:lismenueditoroptions
 msgid "Editor options"
@@ -6014,6 +6014,10 @@ msgstr ""
 msgid "Save session information in"
 msgstr ""
 
+#: lazarusidestrconsts:lislazbuildsavesettings
+msgid "Save settings"
+msgstr ""
+
 #: lazarusidestrconsts:fdmscaleword
 msgid "Scale"
 msgstr "Skaalaa"
@@ -6664,7 +6668,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisoipstate
 msgid "State"
-msgstr ""
+msgstr "Tila"
 
 #: lazarusidestrconsts:dlgstatickeyword
 msgid "Static Keyword in Objects"
@@ -6688,11 +6692,11 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenustop
 msgid "Stop"
-msgstr ""
+msgstr "Pysäytä"
 
 #: lazarusidestrconsts:lisstopdebugging
 msgid "Stop Debugging?"
-msgstr ""
+msgstr "Lopetetaanko testaus/virheenjäljitys?"
 
 #: lazarusidestrconsts:dlgstopafternrerr
 msgid "Stop after number of errors:"
@@ -6708,7 +6712,7 @@ msgstr "Pysäytetäänkö virheenjäljitys?"
 
 #: lazarusidestrconsts:lisstopthedebugging
 msgid "Stop the debugging?"
-msgstr ""
+msgstr "Pysäytetäänkö virheenjäljitys?"
 
 #: lazarusidestrconsts:dlgcdtstoredpostfix
 msgid "Stored postfix"
@@ -7208,7 +7212,7 @@ msgstr "Seuraavan komponenttipaketin lataaminen epäonnistui:"
 
 #: lazarusidestrconsts:lispkgmangthefollowingpackagesfailedtoload
 msgid "The following packages failed to load:"
-msgstr ""
+msgstr "Seuraavien komponenttipakettien lataaminen epäonnistui:"
 
 #: lazarusidestrconsts:listhefollowingunitswerenotfound1eithertheseunitsaren
 msgid "The following units were not found:%s%s%s%s1) Either these units are not in the unit path, then you can abort now, fix the unit path and try again.%s2) Or you can ignore the missing units and comment them out."
